--- a/liquidsoap-lang.opam
+++ b/liquidsoap-lang.opam
@@ -11,7 +11,7 @@ depends: [
   "dune" {>= "3.6"}
   "ocaml" {>= "4.14"}
   "dune-site"
-  "saturn_lockfree" {>= "0.4.1"}
+  "saturn_lockfree" {>= "0.4.1" & < "0.5.0"}
   "re" {>= "1.11.0"}
   "ppx_string" {build}
   "ppx_hash" {build}
