Add regression test for #4116 (#4120)

--- a/tests/regression/dune
+++ b/tests/regression/dune
@@ -50,3 +50,20 @@
   (pipe-stdout
    (echo "print(123)")
    (run %{run_test} "stdin script" liquidsoap --check "-"))))
+
+(rule
+ (alias citest)
+ (package liquidsoap)
+ (target theora-test.mp4)
+ (action
+  (run
+   ffmpeg
+   -f
+   lavfi
+   -i
+   testsrc=duration=10:size=1280x720:rate=30
+   -f
+   lavfi
+   -i
+   "sine=frequency=1000:duration=10"
+   %{target})))
