--- a/liquidsoap.opam
+++ b/liquidsoap.opam
@@ -20,6 +20,8 @@ depends: [
   "liquidsoap-core" {= version}
   "liquidsoap-libs" {>= "2.3.0" & < "2.3.1"}
   "liquidsoap-libs-extra" {>= "2.3.0" & < "2.3.1"}
+  "pandoc" {with-doc}
+  "pandoc-include" {with-doc}
   "odoc" {with-doc}
 ]
 build: [
