--- a/scripts/dune
+++ b/scripts/dune
@@ -28,3 +28,21 @@
   (liquidsoap-mode.el as emacs/site-lisp/liquidsoap-mode.el)
   (liquidsoap-completion.el as emacs/site-lisp/liquidsoap-completion.el)
   (liquidsoap-completions.el as emacs/site-lisp/liquidsoap-completions.el)))
+
+(rule
+  (alias gen_cue_file)
+  (target cue_file.new)
+  (action
+    (run wget https://raw.githubusercontent.com/savonet/autocue.cue_file/refs/heads/main/cue_file -O %{target})))
+
+(rule
+ (alias gen_cue_file)
+ (action
+  (diff cue_file cue_file.new)))
+
+(install
+ (section
+  (site
+   (liquidsoap-lang scripts)))
+ (package liquidsoap-core)
+ (files cue_file))
