--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
 
       - id: check-merge-conflict
       - id: end-of-file-fixer
-        exclude: dune.inc
+        exclude: (dune.inc|autocue.cue_file.liq)
       - id: mixed-line-ending
         exclude: dune.inc
       - id: trailing-whitespace
@@ -29,6 +29,7 @@ repos:
     rev: c5eab8dceed09fa985b3cf0ba3fe7f398fc00c04
     hooks:
       - id: liquidsoap-prettier
+        exclude: autocue.cue_file.liq
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
@@ -41,7 +42,7 @@ repos:
     hooks:
       - id: codespell
         args: [-w, --ignore-words=.codespellignore]
-        exclude: ^doc/orig/fosdem2020
+        exclude: (fosdem2020|cue_file)
 
   - repo: local
     hooks:
