--- a/scripts/dune
+++ b/scripts/dune
@@ -30,13 +30,13 @@
   (liquidsoap-completions.el as emacs/site-lisp/liquidsoap-completions.el)))
 
 (rule
-  (alias gen_cue_file)
+  (alias update_cue_file)
   (target cue_file.new)
   (action
     (run wget https://raw.githubusercontent.com/savonet/autocue.cue_file/refs/heads/main/cue_file -O %{target})))
 
 (rule
- (alias gen_cue_file)
+ (alias update_cue_file)
  (action
   (diff cue_file cue_file.new)))
 
