--- a/scripts/dune
+++ b/scripts/dune
@@ -30,12 +30,16 @@
   (liquidsoap-completions.el as emacs/site-lisp/liquidsoap-completions.el)))
 
 (rule
-  (alias update_cue_file)
-  (target cue_file.new)
-  (action
-    (progn
-      (run wget https://raw.githubusercontent.com/savonet/autocue.cue_file/refs/heads/main/cue_file -O %{target})
-      (run chmod +x %{target}))))
+ (alias update_cue_file)
+ (target cue_file.new)
+ (action
+  (progn
+   (run
+    wget
+    https://raw.githubusercontent.com/savonet/autocue.cue_file/refs/heads/main/cue_file
+    -O
+    %{target})
+   (run chmod +x %{target}))))
 
 (rule
  (alias update_cue_file)
